[package]
name = "rgb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
spin_sleep = "1.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }

[profile.dev]
overflow-checks = false